Added stylesheet, CSS, a header, and lorem ipsum

--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <title>SomethingSomethingPovel...</title>
+  <link rel="stylesheet" href="stylesheet.css" type="text/css">
+  <title>Povel Larsson</title>
 </head>
 
 <body>
+  <div class="all">
 
-  <p> Hello World?</P>
+<div class = "header">
+  <h1>Povel Larsson</h1>
+</div>
 
-  </body>
-  
+<div class = "content">
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+     veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+      est laborum.</p>
+</div>
+
+<div class = "footer">
+</div>
+
+
+</div>
+
+
+</body>
+
 
 </html>
