Fixed scaling and overflow.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 </head>
 
 <body>
-  <div class="all">
+  <div id="all">
 
-<div class = "header">
+<div id = "header">
   <h1>Povel Larsson</h1>
 </div>
 
-<div class = "content">
+<div id = "content">
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -22,13 +22,11 @@
       est laborum.</p>
 </div>
 
-<div class = "footer">
+<div id = "footer">
 </div>
 
 
 </div>
-
-
 </body>
 
 
