--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+  <meta charset="utf-8"/>
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
   <title>Povel Larsson</title>
 </head>
@@ -13,6 +14,8 @@
 </div>
 
 <div id = "content">
+    <img class ="circle" id="profPicture" src="pics/profPics.jpg">
+    <h1>SIDAN ÄR UNDER KONSTRUKTION</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
