Made the profpic smaller in bytes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
 
 <div id = "content">
-    <img class ="circle" id="profPicture" src="pics/profPics.jpg">
+    <img class ="circle" id="profPicture" src="pics/profPic.jpg">
     <h1>SIDAN ÄR UNDER KONSTRUKTION</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
