--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8"/>
+  <meta name=viewport content='width=700'>
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
   <title>Povel Larsson</title>
 </head>
