Made simple startpage.

--- a/index.html
+++ b/index.html
@@ -1,29 +1,84 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8"/>
-  <meta name=viewport content='width=350'>
-  <link rel="stylesheet" href="stylesheet.css" type="text/css">
-  <title>Povel Larsson</title>
+	<meta charset="utf-8">
+
+	<title>Povel Larsson</title>
+
+	<style>
+		@import url(http://fonts.googleapis.com/css?family=Roboto:400,900);
+
+
+body {
+  background-image: url("pics/background.jpeg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-color: #464646;
+  font-family: ‘Roboto’, sans-serif;
+  font-weight: 900;
+  -webkit-background-size: cover;
+}
+
+header {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-align: center;
+
+
+}
+h1 {
+  text-transform: uppercase;
+  margin: 0;
+  font-size: 30px;
+  white-space: nowrap;
+}
+p {
+  margin: 20;
+  font-size: 20px;
+}
+
+a {
+  color: white;
+text-decoration: none;
+
+}
+
+a:visited {
+color: white;
+}
+
+a:hover   {
+text-decoration: underline
+}
+
+
+	</style>
 </head>
 
 <body>
-  <div id="all">
 
-<div id = "header">
+<header>
   <h1>Povel Larsson</h1>
-</div>
+  <h2>Student och programmerare, framtida ingenjör</h2>
+<p><a href="https://se.linkedin.com/in/povel-larsson-90737083" style="text-decoration:none">
+<img src="pics/link.png"
+</a>
+<a href="resume.pdf" style="text-decoration:none">
+<img src="pics/resume.png" style="width:38px;height:38px;border:0;"
+</a>
+<a href="mailto:povel.larsson@gmail.com" style="text-decoration:none">
+<img src="pics/mail.png" style="width:38px;height:38px;border:0;"
+</a></p>
 
-<div id = "content">
-    <h1>SIDAN ÄR UNDER KONSTRUKTION</h1>
-</div>
-
-<div id = "footer">
-</div>
+</header>
 
 
-</div>
 </body>
-
 
 </html>
