--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@ text-decoration: underline
 <header>
   <h1>Povel Larsson</h1>
   <h2>Student och programmerare, framtida ingenjör</h2>
-<p><a href="https://se.linkedin.com/in/povel-larsson-90737083" style="text-decoration:none">
+<p>
+
+<a href="http://github.com/p0ff3" style="text-decoration:none">
+<img src="pics/github.png" style="width:38px;height:38px;border:0;"
+</a>
+<a href="https://se.linkedin.com/in/povel-larsson-90737083" style="text-decoration:none">
 <img src="pics/link.png"
 </a>
 <a href="resume.pdf" style="text-decoration:none">
