Tranlsated to english

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ text-decoration: underline
 
 <header>
   <h1>Povel Larsson</h1>
-  <h2>Student och programmerare, framtida ingenjör</h2>
+  <h2>Student, developer, future engineer</h2>
 <p>
 
 <a href="http://github.com/p0ff3" style="text-decoration:none">
